# ussa1976

./: .cookiecutter.json  .darglint  .flake8  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: bibliography.bib  conf.py  index.rst  reference.rst  requirements.txt  usage.rst  user_guide.rst
src/ussa1976/: __init__.py  __main__.py  _version.py  constants.py  core.py  units.py
tests/: __init__.py  test_core.py  test_main.py  test_units.py
